# shiga

./: .gitignore  CMakeLists.txt  web_build.ps1  web_debug.ps1
.github/workflows/: build.yml
src/: CMakeLists.txt  main.cpp
src/web_conf/: pre.js  resourceList.json
